--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,9 @@ body {
   box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.3);
 }
 
-.header h1 {
+.header h2 {
   margin-left: 10px;
-  text-shadow: 0 0 5px #000000, 0 0 5px #000000, 0 0 5px #080808, 0 0 5px #050505, 0 0 5px ;
+  text-shadow: 0 0 1px #000000, 0 0 1px #000000, 0 0 1px #080808, 0 0 2px #050505, 0 0 2px ;
 }
 
 .login-button {
@@ -66,11 +66,25 @@ button:hover {
 }
 
 .startBlogButton {
+  margin: 2.5px;
   padding: 20px;
   color: white;
   font-weight: bold;
   font-size: medium;
-  border-radius: 30px;
+  border-radius: 0px;
+  background-color: #61dafb;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.2);
+}
+
+.viewPostsButton {
+  margin: 2.5px;
+  padding: 20px;
+  color: white;
+  font-weight: bold;
+  font-size: medium;
+  border-radius: 0px;
   background-color: #61dafb;
   border: none;
   cursor: pointer;
@@ -136,4 +150,32 @@ button:hover {
 
 .auth-form .toggle-button:hover {
   background-color: #5a6268;
+}
+
+/* Style the list of posts */
+
+.blog-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.blog-item {
+  border: 1px solid #ccc;
+  margin: 10px 0;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.blog-item img {
+  margin-right: 10px;
+}
+
+.blog-item h3 {
+  margin: 0;
+  flex-grow: 1;
+}
+
+.blog-item p {
+  margin: 0 10px;
 }
