--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,45 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.App {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.left-section {
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 20%; 
+  height: calc(100% - 60px); 
+  background-color: beige;
+  padding: 20px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  padding-top: 135px; 
+}
+
+.left-section button {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.right-section {
+  margin-left: 22%; 
+  padding: 20px;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+  margin-top: 10px;
+}
+
+.checkbox {
+  margin-top: 80px;
+}
+
 .ql-editor img {
   cursor: pointer;
 }
@@ -18,15 +57,29 @@ body {
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
+  margin: -5px;
   padding: 0px;
   background-color: #87CEEB;
   color: white;
   box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.3);
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+}
+
+.navButton {
+  padding: 30px;
+  font-size: medium;
+  border: none;
+  background-color: turquoise;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .header h2 {
   margin-left: 10px;
-  text-shadow: 0 0 1px #000000, 0 0 1px #000000, 0 0 1px #080808, 0 0 2px #050505, 0 0 2px ;
+  //text-shadow: 0 0 1px #000000, 0 0 1px #000000, 0 0 1px #080808, 0 0 2px #050505, 0 0 2px ;
+  color: black;
 }
 
 .login-button {
@@ -60,9 +113,10 @@ button:hover {
 }
 
 .blogButton {
+  display: block;
   text-align: center;
-  margin-top: 300px;
-  
+  margin: 100px auto;
+  margin-left: 55%;
 }
 
 .startBlogButton {
@@ -155,6 +209,7 @@ button:hover {
 /* Style the list of posts */
 
 .blog-list {
+  margin-top: 60px;
   list-style-type: none;
   padding: 0;
 }
@@ -202,21 +257,37 @@ button:hover {
 }
 
 .feed {
+  margin-top: 85px;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 20px;
   justify-content: center;
 }
 
 .card {
+  display: flex;
+  justify-content: space-between;
   background-color: #fff;
   border: 1px solid #ddd;
-  border-radius: 8px;
+  border-radius: 0px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  
-  width: 100%;
+  width: 95%;
   margin: 10px;
+}
+
+.post-content {
+  flex: 3.5;
+  margin-right: 20px;
+}
+
+.additional-content {
+  flex: 1;
+  border-left: 1px solid #ccc;
+  padding-left: 20px;
+  display: flex;
+  justify-content: center;
+  
 }
 
 .post-content img {
@@ -234,4 +305,51 @@ button:hover {
 .post-content p {
   font-size: 1em;
   margin-bottom: 10px;
+}
+
+/* Modal.css */
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+  text-align: center;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.advert-save-button {
+  padding: 10px 20px;
+  background-color: turquoise;
+  border: none;
+  box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.3);
+  background-color: #87CEEB;
 }
